--- a/biodata.html
+++ b/biodata.html
@@ -29,6 +29,7 @@
            Instead, they wanted my siblings and me to choose careers and a life that will give us joy and stability. 
            
 
+        <h2 style="font-family:verdana;"> <h2 style="font-size:50%;"> <h2 style="text-align:center;"> <blockquote>Copy right © 2022 Nursyazwani. All right reserved</blockquote> </h2>
 
     </body>
 </html>
