--- a/education.html
+++ b/education.html
@@ -67,6 +67,8 @@
                 </tr>
               </table>
 
+          <h3 style="font-family:verdana;"> <h3 style="font-size:50%;"> <h3 style="text-align:center;"> <blockquote>Copy right © 2022 Nursyazwani. All right reserved</blockquote> </h3>
+
 
     </body>
 </html>
