--- a/experience.html
+++ b/experience.html
@@ -48,6 +48,8 @@
              After a tiring walk we rested at Padang Kota while enjoying the food sold there.</p> <br> </blockquote>
 
 
+        <h2 style="font-family:verdana;"> <h2 style="font-size:50%;"> <h2 style="text-align:center;"> <blockquote>Copy right © 2022 Nursyazwani. All right reserved</blockquote> </h2>
+
 
     </body>
 </html>
