--- a/family.html
+++ b/family.html
@@ -39,6 +39,10 @@
             <li> <b>Muhammad Shah Rizal</b> </li>
         </ol>
         
+        <h2 style="font-family:verdana;"> <h2 style="font-size:50%;"> <h2 style="text-align:center;"> <blockquote>Copy right © 2022 Nursyazwani. All right reserved</blockquote> </h2>
+
+
+
 
     </body>
 </html>
