--- a/gallery.html
+++ b/gallery.html
@@ -41,5 +41,8 @@
 
         <img src="images/glasses.jpeg" width="310" height="450">
 
+    <h1 style="font-family:verdana;"> <h1 style="font-size:50%;"> <h1 style="text-align:center;"> <blockquote>Copy right © 2022 Nursyazwani. All right reserved</blockquote> </h1>
+
+
     </body>
 </html>
