--- a/new index.html
+++ b/new index.html
@@ -57,6 +57,9 @@
         <video width="800" height="560" controls>
             <source src="video/tiktok.mp4" type="video/mp4">
         </video>
+
+    <h5 style="font-family:verdana;"> <h5 style="font-size:50%;"> <h5 style="text-align:center;"> <blockquote>Copy right © 2022 Nursyazwani. All right reserved</blockquote> </h5>
+
     
 </body>
 
