--- a/new index.html
+++ b/new index.html
@@ -47,7 +47,14 @@
 
 <body>
 
+    <audio controls autoplay>
+        <source src="audio/only.mp3" type="audio/ogg">
+        <source src="audio/only.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+      </audio>
+
     <h4> <br> <blockquote> <big> <font color="white" face="times new roman"> Click the OKAY!</font> </big></blockquote> <br> </h4>
+
 
     <img src="images/wawa2.png" usemap="#wawa2.png">
         <map name="wawa2.png">
