--- a/biodata.html
+++ b/biodata.html
@@ -14,6 +14,12 @@
 
         <button onclick="document.location='new index.html'">Home</button>
 
+        <audio controls autoplay>
+            <source src="audio/JK BTS (Jungkook) - Still With You [128 kbps].mp3" type="audio/ogg">
+            <source src="audio/JK BTS (Jungkook) - Still With You [128 kbps].mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+
 
         <h1 style="background-color:wheat;">My Biodata</h1>
 
@@ -29,6 +35,7 @@
            Instead, they wanted my siblings and me to choose careers and a life that will give us joy and stability. 
            
 
+        <h2 style="font-family:verdana;"> <h2 style="font-size:50%;"> <h2 style="text-align:center;"> <blockquote>Copy right © 2022 Nursyazwani. All right reserved</blockquote> </h2>
 
     </body>
 </html>
