--- a/experience.html
+++ b/experience.html
@@ -18,6 +18,12 @@
 
         <h1 style="background-color: saddlebrown;">My Experience</h1>
 
+        <audio controls autoplay>
+            <source src="audio/TWICE - The Feels [128 kbps].mp3" type="audio/ogg">
+            <source src="audio/TWICE - The Feels [128 kbps].mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+
         <br> <b> <big> <font color="saddlebrown" face="broadway" > Thing I had experienced </font> </big> </b> </br>
 
         <ul type="circle">
@@ -47,6 +53,8 @@
              After that, we stopped at Medan Selera and enjoyed a meal of grilled fish by the sea. In the evening, we had a chance to visit Street Art to see the various art painted on the walls of each street alley and take pictures as memories. 
              After a tiring walk we rested at Padang Kota while enjoying the food sold there.</p> <br> </blockquote>
 
+
+        <h2 style="font-family:verdana;"> <h2 style="font-size:50%;"> <h2 style="text-align:center;"> <blockquote>Copy right © 2022 Nursyazwani. All right reserved</blockquote> </h2>
 
 
     </body>
