--- a/new index.html
+++ b/new index.html
@@ -47,7 +47,14 @@
 
 <body>
 
+    <audio controls autoplay>
+        <source src="audio/only.mp3" type="audio/ogg">
+        <source src="audio/only.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+      </audio>
+
     <h4> <br> <blockquote> <big> <font color="white" face="times new roman"> Click the OKAY!</font> </big></blockquote> <br> </h4>
+
 
     <img src="images/wawa2.png" usemap="#wawa2.png">
         <map name="wawa2.png">
@@ -57,6 +64,9 @@
         <video width="800" height="560" controls>
             <source src="video/tiktok.mp4" type="video/mp4">
         </video>
+
+    <h5 style="font-family:verdana;"> <h5 style="font-size:50%;"> <h5 style="text-align:center;"> <blockquote>Copy right © 2022 Nursyazwani. All right reserved</blockquote> </h5>
+
     
 </body>
 
