--- a/education.html
+++ b/education.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
     <head> 
@@ -43,79 +42,11 @@
 
         <h1 style="background-color:black;"> <p style="color:white">My Education</p></h1>
 
-        <h2 style="border:2px solid white;"> <blockquote> <p style="color:white"> I studied at Uitm Rembau in Negeri Sembilan. My course is Information Management. Now I'm in semester 5. It's been 2 years I studied online because of Covid-19. It's so hard for me to concentrate but I will try to do the best. I get dean list every semester and I will do my best to improve my study. My parents always support me in everything I do. I also had many friends in university. My highschool name is SMK Taman Jasmin 2. I miss highschool vibes because it is the best time ever in my life.
-             I get 4A's in SPM. I'm so grateful that I get the oppurtunity to study at university. I like my course, although it's hard to understand but it is interesting. </p> </blockquote> </h2>
-
-             <table style="width: 100%;">
-               <caption> <p style="color:blanchedalmond;"> My school </p> </caption>
-                <tr>
-                  <th>Year</th>
-                  <td>2008-2013</td>
-                  <td>2014-2018</td>
-                  <td>2019-2022</td>
-                </tr>
-                <tr>
-                  <th>Age</th>
-                  <td>7-12</td>
-                  <td>13-17</td>
-                  <td>18-22</td>
-                </tr>
-                <tr>
-                  <th>School</th>
-                  <td>SK Jalan Semenyih 2</td>
-                  <td>SMK Taman Jasmin 2</td>
-                  <td>Uitm Rembau</td>
-                </tr>
-              </table>
-
-          <h3 style="font-family:verdana;"> <h3 style="font-size:50%;"> <h3 style="text-align:center;"> <blockquote>Copy right © 2022 Nursyazwani. All right reserved</blockquote> </h3>
-
-
-    </body>
-=======
-<!DOCTYPE html>
-<html>
-    <head> 
-        <title>EDUCATION</title>
-        <style>
-            body
-                {
-                  background-image: url("images/black-wallpaper-9.jpg");
-                }
-
-        </style>
-
-        <style>
-            table, td, th
-                 {
-                     border: 1px solid black;
-                     border-collapse: collapse;
-                 }
-            td
-              {
-                  text-align: center;
-              }
-
-            th, td
-                  {
-                      padding: 9px;
-                  }
-
-            th, td
-                  {
-                      background-color: white;
-                  }
-        </style>
-
-    </head>
-    <body>
-
-        <img src="images/cat2-removebg-preview.png" width="65px">
-
-        <button onclick="document.location='new index.html'">Home</button>
-
-
-        <h1 style="background-color:black;"> <p style="color:white">My Education</p></h1>
+        <audio controls autoplay>
+          <source src="audio/GFRIEND - 오늘부터 우리는 (Me Gustas Tu) [129 kbps].mp3" type="audio/ogg">
+          <source src="audio/GFRIEND - 오늘부터 우리는 (Me Gustas Tu) [129 kbps].mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
 
         <h2 style="border:2px solid white;"> <blockquote> <p style="color:white"> I studied at Uitm Rembau in Negeri Sembilan. My course is Information Management. Now I'm in semester 5. It's been 2 years I studied online because of Covid-19. It's so hard for me to concentrate but I will try to do the best. I get dean list every semester and I will do my best to improve my study. My parents always support me in everything I do. I also had many friends in university. My highschool name is SMK Taman Jasmin 2. I miss highschool vibes because it is the best time ever in my life.
              I get 4A's in SPM. I'm so grateful that I get the oppurtunity to study at university. I like my course, although it's hard to understand but it is interesting. </p> </blockquote> </h2>
@@ -146,5 +77,4 @@
 
 
     </body>
->>>>>>> 1a30ead5bb37f12940e93cacf635efce524a8bd6
 </html>
