--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
     <head>
@@ -24,6 +23,8 @@
         <video width="1400" height="500" controls>
             <source src="video/WhatsApp Video 2022-01-14 at 11.04.56 PM (1).mp4" type="video/mp4">
         </video>
+
+        <h1 style="font-family:verdana;"> <h1 style="font-size:160%;"> <h1 style="text-align:center;"> <blockquote>Photo's in My Gallery</blockquote> </h1>
 
 
         <blockquote> <img src="images/meow street.jpeg" width="300" height="450">
