--- a/new index.html
+++ b/new index.html
@@ -42,18 +42,20 @@
     </ul>
 </div>
 
-<h3 style="background-color:wheat;">HELLO GUYS, WELCOME TO MY PAGE!</h3>
+<h3 style="background-color:wheat;">HELLO GUYS, WELCOME TO SYAZWANI'S PAGE!</h3>
 
 
 <body>
 
+    <div style="text-align: center;">
     <audio controls autoplay>
         <source src="audio/only.mp3" type="audio/ogg">
         <source src="audio/only.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
       </audio>
+    </div>
 
-    <h4> <br> <blockquote> <big> <font color="white" face="times new roman"> Click the OKAY!</font> </big></blockquote> <br> </h4>
+    <h4> <br> <blockquote> <big> <font color="white" face="times new roman"> Click the OKAY to see My Gallery!</font> </big></blockquote> <br> </h4>
 
 
     <img src="images/wawa2.png" usemap="#wawa2.png">
