--- a/biodata.html
+++ b/biodata.html
@@ -14,11 +14,13 @@
 
         <button onclick="document.location='new index.html'">Home</button>
 
+        <div style="text-align: center;">
         <audio controls autoplay>
             <source src="audio/JK BTS (Jungkook) - Still With You [128 kbps].mp3" type="audio/ogg">
             <source src="audio/JK BTS (Jungkook) - Still With You [128 kbps].mp3" type="audio/mpeg">
           Your browser does not support the audio element.
           </audio>
+        </div>
 
 
         <h1 style="background-color:wheat;">My Biodata</h1>
