--- a/education.html
+++ b/education.html
@@ -42,11 +42,14 @@
 
         <h1 style="background-color:black;"> <p style="color:white">My Education</p></h1>
 
+        <div style="text-align: center;">
         <audio controls autoplay>
           <source src="audio/GFRIEND - 오늘부터 우리는 (Me Gustas Tu) [129 kbps].mp3" type="audio/ogg">
           <source src="audio/GFRIEND - 오늘부터 우리는 (Me Gustas Tu) [129 kbps].mp3" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
+
+        </div>
 
         <h2 style="border:2px solid white;"> <blockquote> <p style="color:white"> I studied at Uitm Rembau in Negeri Sembilan. My course is Information Management. Now I'm in semester 5. It's been 2 years I studied online because of Covid-19. It's so hard for me to concentrate but I will try to do the best. I get dean list every semester and I will do my best to improve my study. My parents always support me in everything I do. I also had many friends in university. My highschool name is SMK Taman Jasmin 2. I miss highschool vibes because it is the best time ever in my life.
              I get 4A's in SPM. I'm so grateful that I get the oppurtunity to study at university. I like my course, although it's hard to understand but it is interesting. </p> </blockquote> </h2>
