--- a/experience.html
+++ b/experience.html
@@ -18,11 +18,14 @@
 
         <h1 style="background-color: saddlebrown;">My Experience</h1>
 
+        <div style="text-align: center;">
         <audio controls autoplay>
             <source src="audio/TWICE - The Feels [128 kbps].mp3" type="audio/ogg">
             <source src="audio/TWICE - The Feels [128 kbps].mp3" type="audio/mpeg">
           Your browser does not support the audio element.
           </audio>
+        
+        </div>
 
         <br> <b> <big> <font color="saddlebrown" face="broadway" > Thing I had experienced </font> </big> </b> </br>
 
