--- a/family.html
+++ b/family.html
@@ -22,11 +22,13 @@
 
         <h1 style="background-color:palevioletred;">My Family</h1>
 
+        <div style="text-align: center;">
         <audio controls autoplay>
             <source src="audio/Spin_-_Janji_Kita.mp3" type="audio/ogg">
             <source src="audio/Spin_-_Janji_Kita.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
           </audio>
+        </div>
 
         <h1 style="text-align: center;"> <img src="images/family.jpeg" width="600px"> </h1>
 
